--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -48,17 +48,17 @@
 
   <script>
     function showRun(data) {
-      $("#results").html(data);
-      $("#results table").stupidtable().stickyTableHeaders({fixedOffset: 60});
+      $("#results").html(data)
+      $("#results table").stupidtable().stickyTableHeaders({fixedOffset: 60})
     }
 
     function showError(message) {
-      $("#results").addClass("query-error").html(message);
+      $("#results").addClass("query-error").html(message)
     }
 
     <%= blazer_js_var "data", variable_params.merge(statement: @statement, query_id: @query.id) %>
 
-    runQuery(data, showRun, showError);
+    runQuery(data, showRun, showError)
   </script>
 <% end %>
 
