--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -6,7 +6,7 @@
       <div class="col-sm-9">
         <%= render partial: "blazer/nav" %>
         <h3 style="margin: 0; line-height: 34px; display: inline;">
-          <%= @query.name %>
+          <%= @query.friendly_name %>
         </h3>
       </div>
       <div class="col-sm-3 text-right">
