--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -85,6 +85,11 @@
     <%= f.text_field :emails, placeholder: "Optional, comma separated", class: "form-control" %>
   </div>
   <p class="text-muted">Emails are sent when a check starts failing, and when it starts passing again.
+
+  <div class="form-group">
+    <%= f.label :slack_channels %>
+    <%= f.text_field :slack_channels, placeholder: "Optional, comma separated", class: "form-control" %>
+  </div>
   <p>
     <% if @check.persisted? %>
       <%= link_to "Delete", check_path(@check), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-danger" %>
