--- a/app/views/blazer/checks/index.html.erb
+++ b/app/views/blazer/checks/index.html.erb
@@ -10,6 +10,7 @@
       <th style="width: 10%;">State</th>
       <th style="width: 10%;">Run</th>
       <th style="width: 20%;">Emails</th>
+      <th style="width: 20%;">Slack Channels</th>
       <th style="width: 15%;"></th>
     </tr>
   </thead>
@@ -27,6 +28,13 @@
           <ul class="list-unstyled" style="margin-bottom: 0;">
             <% check.split_emails.each do |email| %>
               <li><%= email %></li>
+            <% end %>
+          </ul>
+        </td>
+        <td>
+          <ul class="list-unstyled" style="margin-bottom: 0; word-break: break-all;">
+            <% check.split_slack_channels.each do |slack_channel| %>
+              <li><%= slack_channel %></li>
             <% end %>
           </ul>
         </td>
