Added folders to checks

--- a/app/views/blazer/checks/index.html.erb
+++ b/app/views/blazer/checks/index.html.erb
@@ -16,7 +16,13 @@
   <tbody>
     <% @checks.each do |check| %>
       <tr>
-        <td><%= link_to check.query.name, check.query %> <span class="text-muted"><%= check.try(:check_type).to_s.gsub("_", " ") %></span></td>
+        <td>
+          <%= link_to check.query.friendly_name, check.query %>
+          <span class="text-muted"><%= check.try(:check_type).to_s.gsub("_", " ") %></span>
+          <% if check.query.folder && !params[:folder] %>
+            <%= link_to check.query.folder, checks_path(folder: check.query.folder), class: "folder" %>
+          <% end %>
+        </td>
         <td>
           <% if check.state %>
             <small class="check-state <%= check.state.parameterize("_") %>"><%= check.state.upcase %></small>
