--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -84,12 +84,15 @@
     <%= f.label :emails %>
     <%= f.text_field :emails, placeholder: "Optional, comma separated", class: "form-control" %>
   </div>
-  <p class="text-muted">Emails are sent when a check starts failing, and when it starts passing again.
+  <p class="text-muted">Emails are sent when a check starts failing, and when it starts passing again.</p>
 
   <div class="form-group">
     <%= f.label :slack_channels %>
     <%= f.text_field :slack_channels, placeholder: "Optional, comma separated", class: "form-control" %>
   </div>
+  <p class="text-muted">Slack notifications are sent when a check starts failing, and when it starts passing again.</p>
+
+
   <p>
     <% if @check.persisted? %>
       <%= link_to "Delete", check_path(@check), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-danger" %>
