--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -1,5 +1,5 @@
 <% if @error %>
-  <div class="alert alert-danger"><%= @error %></div>
+  <div class="alert alert-danger"><%= @error.first(200) %></div>
 <% elsif !@success %>
   <% if @only_chart %>
     <p class="text-muted">Select variables</p>
