--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -34,6 +34,10 @@
           <%= f.label :description %>
           <%= f.text_area :description, placeholder: "Optional", style: "height: 80px;", class: "form-control" %>
         </div>
+        <div class="form-group">
+          <%= f.label 'Shareable?' %>
+          <%= f.check_box :public %>
+        </div>
         <div class="text-right">
           <%= f.submit "For Enter Press", class: "hide" %>
           <% if @query.persisted? %>
