Enable public url-addressing (#1)
* Set the uuid in before_create

This way we only make one database update

* Refactor database query into a concern

to re-use the ExportsController, as well as the many query page.

* Link to the CSV version of the ExportsController

* isolate "included" to only reference helper_method :blazer_time_value

--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -16,7 +16,7 @@
         <% if !@error && @success %>
           <%= button_to "Download", run_queries_path(query_id: @query.id, format: "csv"), params: {statement: @statement}, class: "btn btn-primary" %>
           <% if @query.public %>
-            <%= link_to "Share", exports_path(pid: @query.pid), class: "btn btn-primary" %>
+            <%= link_to "Share", exports_path(pid: @query.pid, format: "csv"), class: "btn btn-primary" %>
           <% end %>
         <% end %>
       </div>
