--- a/app/views/blazer/_variables.html.erb
+++ b/app/views/blazer/_variables.html.erb
@@ -65,6 +65,7 @@
           {
             ranges: {
              "Today": [dateStr(), dateStr()],
+             "Yesterday": [dateStr(1), dateStr()],
              "Last 7 Days": [dateStr(6), dateStr()],
              "Last 30 Days": [dateStr(29), dateStr()]
             },
