--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -62,8 +62,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :slack_channel %>
-    <%= f.text_field :slack_channel, placeholder: "Optional, formatted as #slack-channel", class: "form-control" %>
+    <%= f.label :notify_slack %>
+    <%= f.check_box :notify_slack, class: "form-control" %>
   </div>
 
   <p class="text-muted">Email and Slack notifications are sent when a check starts failing, and when it starts passing again.
