--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -170,7 +170,10 @@
 
         if (new_record) {
           var draftSQL = DraftStore.restoreDraft()
-          if (draftSQL) { editor.setValue(draftSQL) }
+          if (draftSQL) {
+            editor.setValue(draftSQL)
+            $("#query_statement").val(draftSQL)
+          }
         }
 
         editor.getSession().on("change", function () {
