--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -11,8 +11,8 @@
       <%= blazer_js_var "rootPath", root_path %>
     </script>
     <% if blazer_maps? %>
-      <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css" %>
-      <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js" %>
+      <%= stylesheet_link_tag "https://api.tiles.mapbox.com/mapbox-gl-js/v0.43.0/mapbox-gl.css" %>
+      <%= javascript_include_tag "https://api.tiles.mapbox.com/mapbox-gl-js/v0.43.0/mapbox-gl.js" %>
     <% end %>
     <%= csrf_meta_tags %>
   </head>
