Make Blazer replica aware

--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -133,6 +133,10 @@ input.search:focus {
   color: orange;
 }
 
+.check-state.replica_lag {
+  color: orange;
+}
+
 .check-state.disabled {
   color: #000;
 }
