--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -67,7 +67,7 @@
 <script>
   <%= blazer_js_var "params", variable_params %>
   <%= blazer_js_var "previewStatement", Hash[Blazer.data_sources.map { |k, v| [k, (v.preview_statement rescue "")] }] %>
-  var new_record = <%= @query.new_record? %>;
+  var new_record = <%= @query.new_record? && @query.statement.blank? %>;
 
   var app = new Vue({
     el: "#app",
@@ -98,8 +98,6 @@
         runQuery(data, function (data) {
           _this.running = false
           _this.showResults(data)
-
-          if (new_record) { DraftStore.saveDraft(_this.getSQL()) }
 
           errorLine = _this.getErrorLine()
           if (errorLine) {
@@ -177,6 +175,7 @@
         }
 
         editor.getSession().on("change", function () {
+          if (new_record) { DraftStore.saveDraft(editor.getValue()) }
           $("#query_statement").val(editor.getValue())
           _this.adjustHeight()
         })
@@ -248,4 +247,5 @@
       this.showEditor()
     }
   })
+  $("form").submit(function() { DraftStore.removeDraft() })
 </script>
