--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -67,6 +67,7 @@
 <script>
   <%= blazer_js_var "params", variable_params %>
   <%= blazer_js_var "previewStatement", Hash[Blazer.data_sources.map { |k, v| [k, (v.preview_statement rescue "")] }] %>
+  var new_record = <%= @query.new_record? && @query.statement.blank? %>;
 
   var app = new Vue({
     el: "#app",
@@ -165,7 +166,16 @@
 
         this.editor = editor
 
+        if (new_record) {
+          var draftSQL = DraftStore.restoreDraft()
+          if (draftSQL) {
+            editor.setValue(draftSQL)
+            $("#query_statement").val(draftSQL)
+          }
+        }
+
         editor.getSession().on("change", function () {
+          if (new_record) { DraftStore.saveDraft(editor.getValue()) }
           $("#query_statement").val(editor.getValue())
           _this.adjustHeight()
         })
@@ -237,4 +247,5 @@
       this.showEditor()
     }
   })
+  $("form").submit(function() { DraftStore.removeDraft() })
 </script>
