Add option to override app-wide csp settings

--- a/lib/generators/blazer/templates/config.yml.tt
+++ b/lib/generators/blazer/templates/config.yml.tt
@@ -57,3 +57,6 @@ check_schedules:
   - "1 day"
   - "1 hour"
   - "5 minutes"
+
+# override app-wide csp for Blazer controllers
+override_csp: false
