log out rows and columns

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -95,6 +95,8 @@
     <% elsif chart_type == "scatter" %>
       <%= scatter_chart @rows, xtitle: @columns[0], ytitle: @columns[1], id: chart_id %>
     <% elsif chart_type == "timeline" %>
+      <% logger.debug {"Columns: #{@columns.to_json}"} %>
+      <% logger.debug {"Rows: #{@rows.to_json}"} %>
       <div id="visualization"></div>
 
       <script type="text/javascript">
