--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -95,13 +95,12 @@
     <% elsif chart_type == "scatter" %>
       <%= scatter_chart @rows, xtitle: @columns[0], ytitle: @columns[1], id: chart_id %>
     <% elsif chart_type == "timeline" %>
-      <% Rails.logger.debug { "Columns: #{@columns.to_json}" } %>
-      <% Rails.logger.debug { "Rows: #{@rows.to_json}" } %>
+      <% values = @rows.map.with_index {|array, index| {id: index + 1, content: array[0], start: array[1], end: array[2]}} %>
+      <% logger.debug {"Mapped values: #{values.to_json}"} %>
       <div id="visualization"></div>
 
       <script type="text/javascript">
-          console.log("Columns: <%= @columns.to_json %>");
-          console.log("Rows: <%= @rows.to_json %>");
+          console.log("Values: <%= j values.to_json %>");
 
           // DOM element where the Timeline will be attached
           var container = document.getElementById('visualization');
