--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -95,45 +95,24 @@
     <% elsif chart_type == "scatter" %>
       <%= scatter_chart @rows, xtitle: @columns[0], ytitle: @columns[1], id: chart_id %>
     <% elsif chart_type == "timeline" %>
-      <% values = @rows.map.with_index(1) {|array, index| {id: index, content: array[0], start: array[1], end: array[2]}} %>
-      <% logger.debug {"Mapped values: #{values.to_json}"} %>
+      <% values = @rows.map.with_index(1) { |array, index| { id: index, content: array[0], start: array[1], end: array[2] } } %>
+      <% logger.debug { "Mapped values: #{values.to_json}" } %>
       <div id="visualization"></div>
 
       <script type="text/javascript">
-          console.log('Values: <%= j values.to_json %>');
+          console.log(`Values: ${JSON.parse('<%= j values.to_json %>')}`);
 
           // DOM element where the Timeline will be attached
           var container = document.getElementById('visualization');
 
           // Create a DataSet (allows two way data-binding)
-          var items = new vis.DataSet([
-              {id: 1, content: 'item 1', start: '2013-04-20'},
-              {id: 2, content: 'item 2', start: '2013-04-14'},
-              {id: 3, content: 'item 3', start: '2013-04-18'},
-              {id: 4, content: 'item 4', start: '2013-04-16', end: '2013-04-19'},
-              {id: 5, content: 'item 5', start: '2013-04-25'},
-              {id: 6, content: 'item 6', start: '2013-04-27'}
-          ]);
+          var items = new vis.DataSet(JSON.parse('<%= j values.to_json %>'));
 
           // Configuration for the Timeline
           var options = {};
 
           // Create a Timeline
-          var timeline = function () {
-              console.log("load timeline called");
-              new vis.Timeline(container, items, options);
-          };
-
-          if (window.addEventListener) {
-              window.addEventListener("load", timeline, true);
-          }
-          else if (window.attachEvent) {
-              window.attachEvent("onload", timeline);
-          }
-          else {
-              timeline();
-          }
-
+          new vis.Timeline(container, items, options);
       </script>
     <% elsif @only_chart %>
       <% if @rows.size == 1 && @rows.first.size == 1 %>
