--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -100,13 +100,13 @@
       <div id="visualization"></div>
 
       <script type="text/javascript">
-          console.log(`Values: ${JSON.parse('<%= values.to_json.html_safe %>')}`);
+          console.log(`Values: ${JSON.parse('<%= values.to_json %>')}`);
 
           // DOM element where the Timeline will be attached
           var container = document.getElementById('visualization');
 
           // Create a DataSet (allows two way data-binding)
-          var items = new vis.DataSet(JSON.parse('<%= values.to_json.html_safe %>'));
+          var items = new vis.DataSet(JSON.parse('<%= values.to_json %>'));
 
           // Configuration for the Timeline
           var options = {};
