--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -119,10 +119,12 @@
       <script type="text/javascript">
           // DOM element where the Timeline will be attached
           var container = document.getElementById('visualization');
+          console.log('values: <%= values.to_json.html_safe %>');
+          console.log('groups: <%= groups.to_json.html_safe %>');
 
           // Create a DataSet (allows two way data-binding)
           var items = new vis.DataSet(JSON.parse('<%= values.to_json.html_safe %>'));
-          var groups = JSON.parse('<%= groups.to_json.html_safe %>');
+          var groups = new vis.DataSet(JSON.parse('<%= groups.to_json.html_safe %>'));
 
           // Configuration for the Timeline
           var options = {};
